test/classes/forwarding/forwarding-self.good
forwarding-self.chpl:6: In function 'main':
forwarding-self.chpl:3: error: forwarding cycle detected
forwarding-self.chpl:2: note: for the type A
